# PromoNot

./: .gitignore  test_final_verify.py
backend/: .python-version  README.md  pyproject.toml
backend/src/: build.sh  pyproject.toml
backend/src/client/: authToNotion.py  requestNotion.py
backend/src/client/tests/: test_authToNotion.py
backend/src/core/: EchoConsumer.py  NotionConsumer.py  notionConsumer.py
backend/src/core/management/commands/: create_initial_superuser.py
backend/src/core/tests/: simple_test.py  test_closing_consumers.py  test_models.py  test_notionConsumer.py  test_with_stopconsumer.py  verify_stopconsumer.py
backend/src/server/: admin.py  models.py  notionFallBack.py  urls.py  views.py
backend/src/server/migrations/: 0001_initial.py  0002_secretkeys_email.py  0003_webhookintegration.py  0004_rename_verifciation_token_webhookintegration_verification_token.py  0005_secretkeys_notion_bot_id_and_more.py
backend/src/server/tests/: test_listenNotionFallback.py
backend/src/src/: asgi.py  settings.py  urls.py
backend/src/utils/: encryption.py
frontend/: eslint.config.js  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  vite-env.d.ts
frontend/src/context/: notionKeyContext.test.tsx  notionKeyContext.ts  notionKeyContext.tsx  notionKeyProvider.tsx  useNotionKey.ts  useWebSocket.ts  webSocketContext.test.tsx  webSocketContext.ts  webSocketProvider.test.tsx  webSocketProvider.tsx
frontend/src/pages/: Authorization.tsx  Home.tsx
frontend/src/utils/: test_utils.tsx
