[tool.poetry]
name = "notiongateway"
version = "0.1.0"
description = "Script to link between my notion as database to my frontend project"
authors = ["pyrec-dev"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.7"
uvicorn = {extras = ["standard"], version = "^0.37.0"}
python-dotenv = "^1.1.1"
notion-client = "^2.5.0"
djangorestframework = "^3.16.1"
requests = "^2.32.5"
channels = {extras = ["daphne"], version = "^4.3.1"}
cryptography = "^46.0.3"
pytest = "^8.4.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.3"
black = "^25.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"] # E/F/W = Erreurs standards, I = trier les imports
